--- a/portfolio/styles/globals.css
+++ b/portfolio/styles/globals.css
@@ -2,3 +2,43 @@
 @tailwind components;
 @tailwind utilities;
 
+
+/* Underline styles */
+a {
+    display: block;
+    position: relative;
+    padding: 0;
+  }
+  
+  /* Fade in */
+  a::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0.1em;
+    background-color: rgb(0, 0, 0);
+    opacity: 0;
+    transition: opacity 300ms, transform 300ms;
+  }
+  
+  a:hover::after,
+  a:focus::after {
+    opacity: 1;
+    transform: translate3d(0, 0.2em, 0);
+  }
+  
+  li a {
+    overflow: hidden;
+  }
+  
+  li a::after {
+    opacity :1;
+    transform: translate3d(-100%, 0, 0);
+  }
+  
+  li a:hover::after,
+  li a:focus::after{
+    transform: translate3d(0, 0, 0);
+  }
